--- a/AcademiaMusculacao/src/ComponenteListagem/TelaListagemFuncionarios.form
+++ b/AcademiaMusculacao/src/ComponenteListagem/TelaListagemFuncionarios.form
@@ -61,7 +61,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="36" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Listagem de Alunos"/>
+        <Property name="text" type="java.lang.String" value="Listagem de Funcion&#xe1;rios"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
